<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="none"
    tools:context="com.example.android.falsemythsquiz.Results">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_padding">

        <LinearLayout
            android:id="@+id/results_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/ResultsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answers" />

            <TextView
                style="@style/AnswerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="6dp"
                android:text="@string/the_answers" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/your_score"
                    style="@style/ResultsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:text="@string/your_score" />

                <TextView
                    android:id="@+id/score_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/your_score"
                    android:paddingLeft="24dp"
                    android:paddingTop="6dp"
                    android:text="0/85"
                    android:textColor="#757575"
                    android:textSize="48sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="4dp"
                android:text="@string/scoring_system_title"
                android:textColor="#757575"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/scoring_system"
                android:textColor="#9e9e9e"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/results_main"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="onRestart"
            android:text="@string/restart"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>